--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Clone Repository
         uses: actions/checkout@v2
       - name: Run Static Code Analysis
-        uses: sonarsource/sonarcloud-github-action@v2
+        uses: sonarsource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
