Adding a sonar project properties file, so the code analysis works, again

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.organization: Rafael Villegas Michel
+sonar.organization: rvillegasm
 sonar.projectKey: rvillegasm_online-store
 
 # relative paths to source directories. More details and properties are described
