--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,7 @@ MAIL_FROM_NAME="${APP_NAME}"
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
+AWS_SESSION_TOKEN=
 AWS_BUCKET=
 
 PUSHER_APP_ID=
