--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_REDIRECT_URL=http://localhost/online-store/public
 
 LOG_CHANNEL=stack
 
@@ -40,6 +41,9 @@ AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_SESSION_TOKEN=
 AWS_BUCKET=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
