Changing some things about the Dockerfile and ci env file, in order to optimize them

--- a/.env.ci
+++ b/.env.ci
@@ -8,9 +8,9 @@ APP_REDIRECT_URL=http://localhost/online-store/public
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=online-store.czt72qtqrlfb.us-east-1.rds.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=online-store
+DB_DATABASE=online_store
 DB_USERNAME=admin
 DB_PASSWORD=admin1234
 
