--- a/.env.ci
+++ b/.env.ci
@@ -8,7 +8,7 @@ APP_REDIRECT_URL=http://localhost/online-store/public
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=online-store.czt72qtqrlfb.us-east-1.rds.amazonaws.com
+DB_HOST=onlinestore.czt72qtqrlfb.us-east-1.rds.amazonaws.com
 DB_PORT=3306
 DB_DATABASE=online_store
 DB_USERNAME=admin
