--- a/.env.ci
+++ b/.env.ci
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
-APP_REDIRECT_URL=http://localhost/online-store/public
+APP_REDIRECT_URL=http://mrwatch.tk
 
 LOG_CHANNEL=stack
 
@@ -39,8 +39,8 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_SESSION_TOKEN=
 AWS_BUCKET=
 
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=71673440951-tcq6c65ju8lcai933cilabs9bgq08v5g.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=T4gxOgdgvtPGV1u2apzWTdh3
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
