Correcciones necesaria y Agregar uso del Api

--- a/.env.ci
+++ b/.env.ci
@@ -42,6 +42,8 @@ AWS_BUCKET=
 GOOGLE_CLIENT_ID=71673440951-tcq6c65ju8lcai933cilabs9bgq08v5g.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=T4gxOgdgvtPGV1u2apzWTdh3
 
+PARTNER_API_URL=http://ec2-3-84-221-33.compute-1.amazonaws.com/public/sells
+
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
